--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-plug",
-  "homepage": "https://YuriAndreevich.github.io/vite-plug/",
+  "name": "portfolio",
+  "homepage": "https://YuriAndreevich.github.io/portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
